# backend/service-core/src/main/java/com/primesloth/budgetcontrolapp/repositories/ResourceRepository.java
@@ -1,0 +1,16 @@
+package com.primesloth.budgetcontrolapp.repositories;
+
+import com.primesloth.budgetcontrolapp.entities.ResourceEntity;
+import org.springframework.data.jpa.repository.JpaRepository;
+import org.springframework.data.jpa.repository.Query;
+import org.springframework.data.repository.query.Param;
+import org.springframework.stereotype.Repository;
+
+import java.util.List;
+
+@Repository
+public interface ResourceRepository extends JpaRepository<ResourceEntity, Long> {
+
+    @Query("select re from ResourceEntity re where re.organizationEntity.name = :name order by re.username")
+    List<ResourceEntity> findAllByOrganizationName(@Param("name") String name);
+}
