# backend/service-core/src/main/resources/oas/apis.yaml
@@ -258,7 +258,7 @@ paths:
                   $ref: '#/components/schemas/Client'
     post:
       summary: Create a new client
-      operationId: createNewClientByOrganizationName
+      operationId: createClientByOrganizationName
       tags:
         - Clients
       parameters:
@@ -280,6 +280,106 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Client'
+  /organizations/{name}/resources:
+    get:
+      summary: Get all resources
+      operationId: getAllResourcesByOrganizationName
+      tags:
+        - Resources
+      parameters:
+        - name: name
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: List of resources
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Resource'
+    post:
+      summary: Create a new resource
+      operationId: createResourceByOrganizationName
+      tags:
+        - Resources
+      parameters:
+        - name: name
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Resource'
+      responses:
+        '201':
+          description: Resource created successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Resource'
+  /organizations/{name}/clients/{id}/projects:
+    get:
+      summary: Get all projects related to a client
+      operationId: getAllProjectsByOrganizationNameAndClientId
+      tags:
+        - Projects
+      parameters:
+        - name: name
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: List of projects
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Project'
+    post:
+      summary: Create a new project
+      operationId: createProjectByOrganizationNameAndClientId
+      tags:
+        - Projects
+      parameters:
+        - name: name
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Project'
+      responses:
+        '201':
+          description: Resource created successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Project'
   /organizations/{name}/clients/{id}:
     get:
       summary: Get a client by ID
@@ -356,6 +456,29 @@ paths:
           description: Client deleted successfully
 components:
   schemas:
+    Project:
+      type: object
+      properties:
+        id:
+          type: integer
+          description: The id of the project
+        name:
+          type: string
+          description: The name of the project
+        revenue:
+          type: number
+          format: double
+          description: The revenue expected for the project
+        cci:
+          type: number
+          format: double
+          description: The cci expected for the project
+        startDate:
+          type: string
+          example: "2021-01-01"
+        endDate:
+          type: string
+          example: "2021-01-01"
     Organization:
       type: object
       properties:
@@ -391,5 +514,23 @@ components:
           type: integer
         name:
           type: string
-        organization:
-          $ref: '#/components/schemas/Organization'
+    Resource:
+      type: object
+      properties:
+        id:
+          type: integer
+        username:
+          type: string
+        level:
+          enum:
+            - Analyst
+            - Consultant
+            - Manager
+            - Senior Manager
+            - Managing Director
+        lcr:
+          type: number
+          format: double
+        chargeability:
+          type: number
+          format: double
